# serializer version: 1
# name: test_sensors[sensor.mastodon_trwnh_mastodon_social_followers-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.mastodon_trwnh_mastodon_social_followers',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Followers',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Followers',
    'platform': 'mastodon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'followers',
    'unique_id': 'trwnh_mastodon_social_followers',
    'unit_of_measurement': 'accounts',
  })
# ---
# name: test_sensors[sensor.mastodon_trwnh_mastodon_social_followers-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mastodon @trwnh@mastodon.social Followers',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'accounts',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.mastodon_trwnh_mastodon_social_followers',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3169',
  })
# ---
# name: test_sensors[sensor.mastodon_trwnh_mastodon_social_following-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.mastodon_trwnh_mastodon_social_following',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Following',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Following',
    'platform': 'mastodon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'following',
    'unique_id': 'trwnh_mastodon_social_following',
    'unit_of_measurement': 'accounts',
  })
# ---
# name: test_sensors[sensor.mastodon_trwnh_mastodon_social_following-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mastodon @trwnh@mastodon.social Following',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'accounts',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.mastodon_trwnh_mastodon_social_following',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '328',
  })
# ---
# name: test_sensors[sensor.mastodon_trwnh_mastodon_social_last_post-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.mastodon_trwnh_mastodon_social_last_post',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Last post',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Last post',
    'platform': 'mastodon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'last_post',
    'unique_id': 'trwnh_mastodon_social_last_post',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.mastodon_trwnh_mastodon_social_last_post-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'timestamp',
      'friendly_name': 'Mastodon @trwnh@mastodon.social Last post',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.mastodon_trwnh_mastodon_social_last_post',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2025-03-04T08:00:00+00:00',
  })
# ---
# name: test_sensors[sensor.mastodon_trwnh_mastodon_social_posts-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.mastodon_trwnh_mastodon_social_posts',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Posts',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Posts',
    'platform': 'mastodon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'posts',
    'unique_id': 'trwnh_mastodon_social_posts',
    'unit_of_measurement': 'posts',
  })
# ---
# name: test_sensors[sensor.mastodon_trwnh_mastodon_social_posts-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mastodon @trwnh@mastodon.social Posts',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': 'posts',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.mastodon_trwnh_mastodon_social_posts',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '69523',
  })
# ---
# name: test_sensors[sensor.mastodon_trwnh_mastodon_social_username-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.mastodon_trwnh_mastodon_social_username',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Username',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Username',
    'platform': 'mastodon',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'username',
    'unique_id': 'trwnh_mastodon_social_username',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.mastodon_trwnh_mastodon_social_username-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'bio': '<p>i have approximate knowledge of many things. perpetual student. (nb/ace/they)</p><p>xmpp/email: a@trwnh.com<br /><a href="https://trwnh.com" target="_blank" rel="nofollow noopener" translate="no"><span class="invisible">https://</span><span class="">trwnh.com</span><span class="invisible"></span></a><br />help me live:<br />- <a href="https://donate.stripe.com/4gwcPCaMpcQ19RC4gg" target="_blank" rel="nofollow noopener" translate="no"><span class="invisible">https://</span><span class="ellipsis">donate.stripe.com/4gwcPCaMpcQ1</span><span class="invisible">9RC4gg</span></a><br />- <a href="https://liberapay.com/trwnh" target="_blank" rel="nofollow noopener" translate="no"><span class="invisible">https://</span><span class="">liberapay.com/trwnh</span><span class="invisible"></span></a></p><p>notes:<br />- my triggers are moths and glitter<br />- i have all notifs except mentions turned off, so please interact if you wanna be friends! i literally will not notice otherwise<br />- dm me if i did something wrong, so i can improve<br />- purest person on fedi, do not lewd in my presence</p>',
      'created': datetime.date(2016, 11, 23),
      'display_name': 'infinite love ⴳ',
      'entity_picture': 'https://files.mastodon.social/accounts/avatars/000/014/715/original/051c958388818705.png',
      'friendly_name': 'Mastodon @trwnh@mastodon.social Username',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.mastodon_trwnh_mastodon_social_username',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '@trwnh@mastodon.social',
  })
# ---
